--- a/workflow-templates/ci.yaml
+++ b/workflow-templates/ci.yaml
@@ -5,13 +5,13 @@ on:
 
 jobs:
   lint:
-    uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v2.3
+    uses: dvsa/.github/.github/workflows/nodejs-lint.yaml@v3.1.0
 
   test:
-    uses: dvsa/.github/.github/workflows/nodejs-test.yaml@v2.3
+    uses: dvsa/.github/.github/workflows/nodejs-test.yaml@v3.1.0
 
   security:
-    uses: dvsa/.github/.github/workflows/nodejs-security.yaml@v2.3
+    uses: dvsa/.github/.github/workflows/nodejs-security.yaml@v3.1.0
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
@@ -21,8 +21,6 @@ jobs:
     outputs:
       short_sha: ${{ steps.sha.outputs.SHORT_SHA }}
       pretty_branch_name: ${{ steps.branch.outputs.NAME }}
-    env:
-      BRANCH_NAME: ${{ github.ref_name }}
     steps:
       - uses: actions/checkout@v3
       - name: Set short sha output
@@ -31,26 +29,26 @@ jobs:
       - name: Set archive name output
         id: branch
         run: |
-          export PRETTY_BRANCH_NAME=$(tr '/' '-' <<< "$BRANCH_NAME")
+          export PRETTY_BRANCH_NAME=$(tr '/' '-' <<< ${{ github.ref_name }})
           echo "NAME=${PRETTY_BRANCH_NAME}" >> $GITHUB_OUTPUT
 
   build:
-    uses: dvsa/.github/.github/workflows/nodejs-build.yaml@v2.3
+    uses: dvsa/.github/.github/workflows/nodejs-build.yaml@v3.1.0
     needs: [ build-names ]
     with:
-      upload_artifact: ${{ github.ref_name == 'main' }}
-      build_folder: dist
-      build_command: build:prod
+      upload-artifact: ${{ github.ref_name == 'main' }}
+      build-folder: dist
+      build-command: build:prod
 
   upload-to-s3:
     if: ${{ github.ref_name == github.event.repository.default_branch }}
-    uses: dvsa/.github/.github/workflows/upload-to-s3.yaml@v2.3
+    uses: dvsa/.github/.github/workflows/upload-to-s3.yaml@v3.1.0
     needs: [ lint, test, build, build-names ]
     with:
       environment: dev
-      short_commit: ${{ needs.build-names.outputs.short_sha }}
+      short-commit: ${{ needs.build-names.outputs.short_sha }}
       artifact: dist.zip
-      bucket_key: <location-in-bucket>/${{ needs.build-names.outputs.pretty_branch_name }}.zip
+      bucket-key: <location-in-bucket>/${{ needs.build-names.outputs.pretty_branch_name }}.zip
     permissions:
       id-token: write
     secrets:
@@ -60,12 +58,12 @@ jobs:
 
   update-lambda-code:
     if: ${{ github.ref_name == github.event.repository.default_branch }}
-    uses: dvsa/.github/.github/workflows/update-lambda-function.yaml@v2.3
+    uses: dvsa/.github/.github/workflows/update-lambda-function.yaml@v3.1.0
     needs: [ build-names, build, upload-s3 ]
     with:
       environment: dev
-      lambda_function_name: <function-name>
-      bucket_key: <location-in-bucket>/${{ needs.build-names.outputs.pretty_branch_name }}.zip
+      lambda-function-name: <function-name>
+      bucket-key: <location-in-bucket>/${{ needs.build-names.outputs.pretty_branch_name }}.zip
     permissions:
       id-token: write
     secrets:
