--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -50,7 +50,7 @@ jobs:
     - run: echo "isPrivate = { ${{ steps.isPrivate.outputs.data }} }" >> $GITHUB_OUTPUT
 
     - name: Upload result to GitHub Code Scanning
-      if: ${{ fromJSON(needs.isPrivate.outputs.isPrivate) == false && inputs.upload-sarif == true  }} 
+      if: ${{ fromJSON(needs.isPrivate.outputs.isPrivate).repository.isPrivate == false && inputs.upload-sarif == true  }} 
       continue-on-error: true
       uses: github/codeql-action/upload-sarif@v2
       with:
