--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -47,10 +47,10 @@ jobs:
         repo: ${{ github.event.repository.name }}
         graphqlEndpoint: ${{ github.graphql_url }}
         token: ${{ secrets.GITHUB_TOKEN }}
-    - run: echo "isPrivate = { ${{ steps.isPrivate.outputs.data }} }" >> $GITHUB_OUTPUT
+    - run: echo " ${{ steps.isPrivate.outputs.data }} " >> $GITHUB_OUTPUT
 
     - name: Upload result to GitHub Code Scanning
-      if: ${{ fromJSON(needs.isPrivate.outputs.isPrivate).repository.isPrivate == false && inputs.upload-sarif == true  }} 
+      if: ${{ fromJSON(needs.isPrivate.outputs)      == false && inputs.upload-sarif == true  }} 
       continue-on-error: true
       uses: github/codeql-action/upload-sarif@v2
       with:
