--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -47,9 +47,10 @@ jobs:
         repo: ${{ github.event.repository.name }}
         graphqlEndpoint: ${{ github.graphql_url }}
         token: ${{ secrets.GITHUB_TOKEN }}
+   
 
     - name: Upload result to GitHub Code Scanning
-      if: ${{ fromJSON(steps.isPrivate.outputs.data).repository.isPrivate  == false && inputs.upload-sarif == true  }} 
+      if: ${{ fromJSON(steps.isPrivate.outputs.data)      == false && inputs.upload-sarif == true  }} 
       continue-on-error: true
       uses: github/codeql-action/upload-sarif@v2
       with:
