--- a/.github/workflows/java-test.yaml
+++ b/.github/workflows/java-test.yaml
@@ -10,6 +10,10 @@ on:
         required: false
         type: string
         default: '11'
+      working-directory:
+        required: false
+        type: string
+        default: '.'
     secrets:
       USER_NAME:
         required: true
@@ -76,3 +80,5 @@ jobs:
         run: |
           aws configure set region eu-west-1
           mvn clean test
+        working-directory: ${{inputs.working-directory}}
+        
