--- a/.github/workflows/java-security.yaml
+++ b/.github/workflows/java-security.yaml
@@ -68,7 +68,7 @@ jobs:
             ]
 
       - name: Generate settings.yaml File Inside Repository
-        uses: fertrig/create-file-action@1.0.2
+        uses: 1arp/create-a-file-action@v0.4.5
         with:
           path: 'config'
           file: 'settings.yaml'
