--- a/.github/workflows/java-test.yaml
+++ b/.github/workflows/java-test.yaml
@@ -76,7 +76,7 @@ jobs:
               "github"
             ]
       - name: Generate settings.yaml File Inside Repository
-        uses: 1arp/create-a-file-action@v0.4.5
+        uses: 1arp/create-a-file-action@0.4.5
         with:
           path: 'config'
           file: 'settings.yaml'
