--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -13,6 +13,10 @@ on:
       phpunit-config-file:
         required: false
         type: string
+      composer-version:
+        required: false
+        type: string
+        default: 'v2'
 
 jobs:
   tests:
@@ -36,7 +40,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          tools: composer:v2
+          tools: composer:${{ inputs.composer-version }}
           coverage: none
 
       - name: Install dependencies
