feat: add configurable php-version

--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -9,6 +9,10 @@ on:
       severity-threshold:
         required: false
         type: string
+      php-version:
+        required: false
+        type: string
+        default: 8.1
       composer-version:
         required: false
         type: string
@@ -29,7 +33,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: 8.1
+        php-version: ${{ inputs.php-version }}
         coverage: none
         extensions: mbstring
         tools: composer:${{ inputs.composer-version }}
