--- a/.github/workflows/php-static.yml
+++ b/.github/workflows/php-static.yml
@@ -28,6 +28,7 @@ jobs:
           php-version: ${{ inputs.php-version }}
           coverage: none
           tools: phpstan, composer:${{ inputs.composer-version }}
+          extensions: redis-phpredis/phpredis@5.3.7
         env:
           REDIS_CONFIGURE_OPTS: --enable-redis-igbinary
 
