--- a/.github/workflows/terraform-static.yaml
+++ b/.github/workflows/terraform-static.yaml
@@ -1,13 +1,9 @@
 name: CI
 
 on:
-  # pull_request:
-
-permissions:
-  contents: read
+  workflow call:
 
 jobs:
-
   terraform-trivy:
     name: Trivy Scan
     runs-on: ubuntu-latest
