--- a/.github/workflows/terraform-static.yaml
+++ b/.github/workflows/terraform-static.yaml
@@ -94,6 +94,8 @@ jobs:
         working-directory: ./
     steps:
       - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v2
+      - run: terraform init
       - run: terraform validate
 
   terraform-lint:
