--- a/.github/workflows/terraform-static.yaml
+++ b/.github/workflows/terraform-static.yaml
@@ -20,6 +20,7 @@ jobs:
           severity: "CRITICAL"
           format: 'table'
           ignore-unfixed: true
+          env: public.ecr.aws/aquasecurity/trivy-db:2
 
   terraform-checkov:
     name: Checkov Scan
