--- a/.github/workflows/terraform-static-full.yaml
+++ b/.github/workflows/terraform-static-full.yaml
@@ -20,7 +20,8 @@ jobs:
           severity: "CRITICAL"
           format: 'table'
           ignore-unfixed: true
-          env: public.ecr.aws/aquasecurity/trivy-db:2
+        env: 
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db:2
 
   terraform-checkov:
     name: Checkov Scan
