add release version to workflow templates

--- a/workflow-templates/terraform-static.yaml
+++ b/workflow-templates/terraform-static.yaml
@@ -5,4 +5,4 @@ on:
 
 jobs:
   terraform-static:
-    uses: dvsa/.github/.github/workflows/terraform-static.yaml@main
+    uses: dvsa/.github/.github/workflows/terraform-static.yaml@v5.0.0
