--- a/workflow-templates/terraform-static-full.yaml
+++ b/workflow-templates/terraform-static-full.yaml
@@ -6,4 +6,4 @@ on:
 
 jobs:
   terraform-static:
-    uses: dvsa/.github/.github/workflows/terraform-static-full.yaml@main
+    uses: dvsa/.github/.github/workflows/terraform-static-full.yaml@v5.0.0
