--- a/.github/workflows/python-lint.yaml
+++ b/.github/workflows/python-lint.yaml
@@ -1,10 +1,11 @@
-name: Linting
-
+name: Python Linting
 on:
-  push:
-    branches: [develop]
-  pull_request:
-    branches: [main]
+  workflow_call:
+    inputs:
+      python-version:
+        required: false
+        type: string
+        default: "3.x"
 
 jobs:
   lint:
@@ -14,13 +15,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: ${{ inputs.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install ruff
       - name: Run Ruff and save results
         run: |
+          mkdir -p logs
           timestamp=$(date +"%Y%m%d_%H%M%S")
           ruff check . > logs/lint_result_${timestamp}.txt
       - name: Run Ruff Format
