--- a/.github/actions/terraform-action/action.yml
+++ b/.github/actions/terraform-action/action.yml
@@ -62,5 +62,5 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: "${{ inputs.environment }}-${{ inputs.component }}"
-        path: "./plans/${{ inputs.environment }}/${{ inputs.component }}-plan.txt"
+        path: "${{ inputs.terraform_directory }}/plans/${{ inputs.environment }}/${{ inputs.component }}-plan.txt"
         retention-days: 7
