--- a/.github/workflows/nodejs-lint.yaml
+++ b/.github/workflows/nodejs-lint.yaml
@@ -15,6 +15,11 @@ on:
         type: string
         required: false
         default: 'latest'
+      biome:
+        type: boolean
+        required: false
+        default: false
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -27,4 +32,8 @@ jobs:
           node-version: ${{ inputs.node-version }}
           npm-version: ${{ inputs.npm-version }}
       - name: Lint
+        if: ${{ !inputs.biome }}
         run: npm run lint -- --max-warnings ${{ inputs.max-warnings }}
+      - name: Lint with Biome
+        if: ${{ inputs.biome }}
+        run: npm run lint
