fix: another way of conditional args
Signed-off-by: Gabriel Guimaraes <80750139+gabrielg2020@users.noreply.github.com>

--- a/.github/workflows/nodejs-lint.yaml
+++ b/.github/workflows/nodejs-lint.yaml
@@ -31,8 +31,5 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
           npm-version: ${{ inputs.npm-version }}
-        
       - name: Lint
-        run: npm run lint ${{ inputs.biome == 'false' }} -- --max-warnings 
-        
-     
+        run: npm run lint ${{ !inputs.biome && '-- --max-warnings'  || ''}}
