--- a/workflow-templates/php-tests.yml
+++ b/workflow-templates/php-tests.yml
@@ -10,6 +10,6 @@ on:
  
 jobs:
   static:
-    uses: dvsa/.github/.github/workflows/php-tests.yml@v4.1.1
+    uses: dvsa/.github/.github/workflows/php-tests.yml@v5.0.6
     with: 
-     php-versions: "[\"7.4\",\"8.0\"]"
+     php-versions: "[\"8.2\","8.3","8.4"]"
