--- a/.github/workflows/php-library-static.yml
+++ b/.github/workflows/php-library-static.yml
@@ -15,6 +15,10 @@ on:
         required: false
         type: string
         default: 'v2'
+      stability:
+        required: false
+        type: string
+        default: '["prefer-lowest", "prefer-stable"]'
 
 jobs:
   phpstan:
@@ -23,7 +27,7 @@ jobs:
     strategy:
       fail-fast: ${{ inputs.fail-fast }}
       matrix:
-        stability: [prefer-lowest, prefer-stable]
+        stability: ${{ fromJSON(inputs.stability) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -48,7 +52,7 @@ jobs:
     strategy:
       fail-fast: ${{ inputs.fail-fast }}
       matrix:
-        stability: [prefer-lowest, prefer-stable]
+        stability: ${{ fromJSON(inputs.stability) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -73,7 +77,7 @@ jobs:
     strategy:
       fail-fast: ${{ inputs.fail-fast }}
       matrix:
-        stability: [prefer-lowest, prefer-stable]
+        stability: ${{ fromJSON(inputs.stability) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
